added content to portfolio

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     </div>  
       <hr>
 
-    <div class="row">
-        <div class="col-sm-5">
-          <img class="wrap" src="https://scontent.fnyc1-1.fna.fbcdn.net/v/t31.0-8/20901307_10211300393924020_3307177351929746219_o.jpg?_nc_cat=110&_nc_oc=AQnY5e5Z6-H4xz5SEep72k7vaXF8KOnDI_q3vbkrQXQ7sruI_zE305AOSl46H24pb1k&_nc_ht=scontent.fnyc1-1.fna&oh=a76c38e463d6c6b96c0bf86d00cf985b&oe=5EAAC0C1" alt="picture of me">
+    <div class="row clearfix">
+        <div class="col-sm-5 float-left">
+          <img src="https://scontent.fnyc1-1.fna.fbcdn.net/v/t31.0-8/20901307_10211300393924020_3307177351929746219_o.jpg?_nc_cat=110&_nc_oc=AQnY5e5Z6-H4xz5SEep72k7vaXF8KOnDI_q3vbkrQXQ7sruI_zE305AOSl46H24pb1k&_nc_ht=scontent.fnyc1-1.fna&oh=a76c38e463d6c6b96c0bf86d00cf985b&oe=5EAAC0C1" class="img-fluid" alt="picture of me">
         </div>
         <div class="col-sm-7">
           <p>
